# paper-organizer

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml
src/: .env.template  app.py  arxiv_paper.py  categorizer.py  chat_with_pdf.py  embed_test.py  embedding_generator.py  main.py  prompts.py  vector_db.py
src/templates/: add_papers.html  base.html  favorites.html  index.html  query.html  view_paper.html  view_papers.html
